--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "async-listen": "^3.0.0",
     "async-sema": "^3.1.1",
     "asynckit": "^0.4.0",
+    "axios": "^1.4.0",
     "babel-plugin-polyfill-corejs2": "^0.4.3",
     "babel-plugin-polyfill-corejs3": "^0.8.1",
     "babel-plugin-polyfill-regenerator": "^0.5.0",
@@ -151,6 +152,7 @@
     "fill-range": "^7.0.1",
     "finalhandler": "^1.2.0",
     "find-up": "^5.0.0",
+    "firebase-admin": "^11.9.0",
     "form-data": "^3.0.1",
     "format": "^0.2.2",
     "forwarded": "^0.2.0",
@@ -412,6 +414,7 @@
     "remark-mdx-frontmatter": "^1.1.1",
     "remark-parse": "^10.0.2",
     "remark-rehype": "^9.1.0",
+    "request": "^2.88.2",
     "require-from-string": "^2.0.2",
     "require-like": "^0.1.2",
     "resolve": "^1.22.2",
